# rust-graphics

./: Cargo.toml  README.md
assets/shaders/: vertex.vert
src/: main.rs  memory_management.rs  renderer.rs
