[package]
name = "rust-graphics"
version = "0.1.0"
authors = ["Andre Soares <andrecaetanosoares@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.18.2"
gfx-hal = "0.6.0"
winit = "0.24.0"
cgmath = "0.17.0"
shaderc = "0.7.0"
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive"] }


[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.6.5"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.6.13"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.6.5"